--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="ny.jpg" alt="New York" width="1200" height="700">
+        <img src="https://static.wixstatic.com/media/41d000_48ae8823b608e29ab7ebb39f83dcf944.jpg/v1/fill/w_1280,h_853,al_c,q_90/41d000_48ae8823b608e29ab7ebb39f83dcf944.jpg" alt="New York" width="1200" height="700">
         <div class="carousel-caption">
           <h3>New York</h3>
           <p>The atmosphere in New York is lorem ipsum.</p>
