--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     
     .carousel-inner img {
-      -webkit-filter: grayscale(90%);
+      /*-webkit-filter: grayscale(90%);
       /*filter: grayscale(90%); /* make all photos black and white */ 
       width: 100%; /* Set width to 100% */
       margin: auto;
@@ -41,7 +41,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="https://static.wixstatic.com/media/41d000_48ae8823b608e29ab7ebb39f83dcf944.jpg/v1/fill/w_1280,h_853,al_c,q_90/41d000_48ae8823b608e29ab7ebb39f83dcf944.jpg" alt="New York" width="1200" height="700">
+        <img src="http://naturekids.co.in/mk/data1/images/1.jpg" alt="New York" width="1200" height="700">
         <div class="carousel-caption">
           <h3>New York</h3>
           <p>The atmosphere in New York is lorem ipsum.</p>
@@ -49,22 +49,13 @@
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" width="1200" height="700">
+        <img src="http://naturekids.co.in/mk/data1/images/2.jpg" alt="Chicago" width="1200" height="700">
         <div class="carousel-caption">
           <h3>Chicago</h3>
           <p>Thank you, Chicago - A night we won't forget.</p>
         </div>      
       </div>
     
-      <div class="item">
-        <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
-        </div>      
-      </div>
-    </div>
-
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
