--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
           <p>Thank you, Chicago - A night we won't forget.</p>
         </div>      
       </div>
+      
+      <div class="item">
+        <img src="http://naturekids.co.in/mk/data1/images/1.jpg" alt="Random" width="1200" height="700">
+        <div class="carousel-caption">
+          <h3>Chicago</h3>
+          <p>Thank you, Random - A night we won't forget.</p>
+        </div>      
+      </div>
     
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
