--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT US</a></li>
         <li><a href="curriculum.html">CURRICULUM</a></li>
+        <li><a href="events.html">EVENTS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
-        <li class="dropdown">
+        <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
             <span class="caret"></span>
           </a>
@@ -55,7 +56,7 @@
             <li><a href="#">Extras</a></li>
             <li><a href="#">Media</a></li>
           </ul>
-        </li>
+        </li>--> 
       </ul>
     </div>
   </div>
@@ -94,7 +95,7 @@
           <p>Thank you, Random - A night we won't forget.</p>
         </div>      
       </div>
-    
+    </div>
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
