--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       margin: auto;
   }
   .carousel-caption h3 {
-      color: #fff !important;
+      color: #000 !important; /* black coloured titles on photos, for white use #fff */
   }
   @media (max-width: 600px) {
     .carousel-caption {
