--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-          <img src="Images/logo.png" alt="Logo" width="100px"> 
+          <img src="Images/logo.png" alt="Logo" width="90px" height="232px"> 
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
