remove footer tooltip

--- a/index.html
+++ b/index.html
@@ -185,18 +185,9 @@
     </a>
 </div>
 
-    <footer class="text-center">
-    <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-    </a><br><br>
-    <p>&copy; Nature Kids</p>
+    <footer >
+        <p>&copy; Nature Kids</p>
     </footer>
     
-    <script>
-        $(document).ready(function(){
-        // Initialize Tooltip
-        $('[data-toggle="tooltip"]').tooltip();
-        })
-    </script>
 </body>
 </html>
