--- a/index.html
+++ b/index.html
@@ -154,24 +154,24 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="Images/girl.jpg" alt="Girl" width="1200" height="700">
-        <div class="carousel-caption">
+        <img src="Images/logo.png" alt="Girl" width="1200" height="700">
+        <!--<div class="carousel-caption">
           <h3>New York</h3>
-        </div>      
+        </div>-->      
       </div>
 
       <div class="item">
-        <img src="Images/boy.jpg" alt="Boy" width="1200" height="700">
-        <div class="carousel-caption">
+        <img src="Images/facility-1.jpg" alt="Boy" width="1200" height="700">
+        <!--<div class="carousel-caption">
           <h3>Chicago</h3>
-        </div>      
+        </div>-->      
       </div>
       
       <div class="item">
-        <img src="Images/girl.jpg" alt="Random" width="1200" height="700">
-        <div class="carousel-caption">
+        <img src="Images/facility-2.jpg" alt="Random" width="1200" height="700">
+        <!--<div class="carousel-caption">
           <h3>Chicago</h3>
-        </div>      
+        </div>-->      
       </div>
     </div>
     <!-- Left and right controls -->
