--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
     }
 
     footer {
-        background-color: #2d2d30;
-        color: #f5f5f5;
-        padding: 32px;
+        text-align: center;
+        padding-top: 0px;
+        background-color: white;
+        font-weight: bold;
+        font-size: 90%
     }
 
     footer a {
