--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,15 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   
 <style>
-    body {
+@media all and (max-width: 640px){
+    #site > .wrapper, #footer > .wrapper {
+        margin: 0;
+        padding: 40px;
+        width: auto;
+    }
+}
+
+  body {
         padding-top: 50px;
     }
     .container {
