Adding external style sheet

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Pre School in Kochi | Day care centre in Kochi</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Nature kids is a Pre School in Kochi, Pre School Kochi, Best Pre School in cochin, day care centre in Kochi Ernakulam, daycare in Kochi, cochin pre-school.">
-  <meta name="keywords" content="Pre School in Kochi, Day Care centre Kochi, Pre School Vyttila, Nursery School Ernakulam, Day Care centre Kochi, vyttila, Ernakulam, Childerns School Kochi, International pre-school Kochi"> 
-  <meta name="owner" content="www.naturekids.in">
-  <meta name="author" content="KS, NatureKids">
-  <meta name="rating" content="General">
-  <meta name="robots" content="Index,follow">
-  <meta name="city" content="Kochi">
-  <meta name="state" content="Kerala">
-  <meta name="country" content="India">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  
+    <title>Pre School in Kochi | Day care centre in Kochi</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Nature kids is a Pre School in Kochi, Pre School Kochi, Best Pre School in cochin, day care centre in Kochi Ernakulam, daycare in Kochi, cochin pre-school.">
+    <meta name="keywords" content="Pre School in Kochi, Day Care centre Kochi, Pre School Vyttila, Nursery School Ernakulam, Day Care centre Kochi, vyttila, Ernakulam, Childerns School Kochi, International pre-school Kochi"> 
+    <meta name="owner" content="www.naturekids.in">
+    <meta name="author" content="KS, NatureKids">
+    <meta name="rating" content="General">
+    <meta name="robots" content="Index,follow">
+    <meta name="city" content="Kochi">
+    <meta name="state" content="Kerala">
+    <meta name="country" content="India">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/ks_style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 <style>
     body {
         padding-top: 50px;
