Added about page

--- a/index.html
+++ b/index.html
@@ -98,12 +98,11 @@
     </a>
 </div>
     
-    <div class="container text-center">
-      <h3>NATUREKIDS KOCHI</h3>
-      <p><em>We love kids!</em></p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <div class="container text-justify">
+        <p>Nature Kids is a childcare and pre-school with a difference. It is set up in forty (40) cents of ideally landscaped and well-appointed compound on the Junior Janatha Road, Vyttila, Cochin, with ample area for children to play, learn and respect nature.<br>
+        We provide an innovative play-based curriculum that is guided by the Early Years Learning Framework EYLF of Australia tailored to suit the needs of our children. It is a globally well-acclaimed pre-school curriculum. We support the preventive and adaptive stress-free curriculum for our preparatory classes.</p>
     </div>
-
+    
     <footer class="text-center">
     <p>&copy; Nature Kids Kochi</p>
     </footer>
