--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/ks_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="scripts/bootstrap-hover-dropdown.min.js"></script>
 
 </head>
 
@@ -35,9 +36,16 @@
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">ABOUT US</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a tabindex="-1" href="about.html">THE EDUCATORS</a></li>
+                <li><a tabindex="-1" href="facilites.html">FACILITIES</a></li>
+                <li><a tabindex="-1" href="about.html">WHATEVER</a></li>
+            </ul>
+            </li>  
         <li><a href="curriculum.html">CURRICULUM</a></li>
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
