making sure all html files are present

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><a tabindex="-1" href="staff.html">THE EDUCATORS</a></li>
-                <li><a tabindex="-1" href="facilites.html">FACILITIES</a></li>
-                <li><a tabindex="-1" href="about.html">WHATEVER</a></li>
+                <li><a href="staff.html">THE EDUCATORS</a></li>
+                <li><a href="facilities.html">THE FACILITIES</a></li>
+                <li><a href="curriculum.html">THE CURRICULUM</a></li>
             </ul>
             </li>  
         <li><a href="events.html">EVENTS</a></li>
-        <li><a href="curriculum.html">GALLERY</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
