--- a/contact.html
+++ b/contact.html
@@ -24,25 +24,32 @@
     
 
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html"> 
-                <img src="Images/logo.png" alt="Logo" width="90px">
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT US</a></li>
-                    <li><a href="curriculum.html">CURRICULUM</a></li>
-                    <li><a href="events.html">EVENTS</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
-                    <!--<li class="dropdown">
+    <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html">
+          <img src="Images/logo.png" alt="Logo" width="90px"> 
+      </a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html">HOME</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a href="staff.html">THE EDUCATORS</a></li>
+                <li><a href="facilities.html">THE FACILITIES</a></li>
+                <li><a href="curriculum.html">THE CURRICULUM</a></li>
+            </ul>
+            </li>  
+        <li><a href="events.html">EVENTS</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
+        <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
             <span class="caret"></span>
           </a>
@@ -52,16 +59,16 @@
             <li><a href="#">Media</a></li>
           </ul>
         </li>--> 
-                </ul>
-            </div>
-        </div>
+      </ul>
+    </div>
+    </div>
     </nav>
 
     <div class="container">
         <h3 class="text-center">Contact us.<br>We look forward to hearing from you.</h3>
         <br>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" style="background-color:white">
                 <p>Our details:</p>
                 <p><span class="glyphicon glyphicon-map-marker"></span> Door No. 53/497,<br>
                Junior Janatha Road, Vyttila P.O<br>
@@ -71,7 +78,7 @@
                 <p><span class="glyphicon glyphicon-envelope"></span> email: naturekidskochi@gmail.com</p>
             </div>
             <div id="contact-form" class="col-md-8">
-                <p>Or fill in this form and we will get in touch.</p>
+                <p>Fill in this form and we will get in touch.</p>
                 <div class="row">
                     <div class="col-sm-6 form-group">
                         <input class="form-control" id="name" name="name" placeholder="Name (required)" type="text" required><br>
