--- a/facilities.html
+++ b/facilities.html
@@ -35,11 +35,18 @@
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">ABOUT US</a></li>
-        <li><a href="curriculum.html">CURRICULUM</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a href="staff.html">THE EDUCATORS</a></li>
+                <li><a href="facilities.html">THE FACILITIES</a></li>
+                <li><a href="curriculum.html">THE CURRICULUM</a></li>
+            </ul>
+            </li>  
         <li><a href="events.html">EVENTS</a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
@@ -53,7 +60,7 @@
         </li>--> 
       </ul>
     </div>
-  </div>
+    </div>
     </nav>
 
     <div class="container text-center">
