staff names added

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
         center:myCenter,
         zoom:16,
         scrollwheel:false,
-        draggable:true,
+        draggable:false,
         mapTypeId:google.maps.MapTypeId.ROADMAP
         };
 
