--- a/staff.html
+++ b/staff.html
@@ -86,46 +86,46 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director</p>
+                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <p><strong>Mrs. Mary Abraham</strong></p>
+                    <p>Educator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-2</strong></p>
-                    <p>Director</p>
+                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <p><strong>Mrs. Tanushree Saha</strong></p>
+                    <p>Educator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-3</strong></p>
-                    <p>Director</p>
+                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <p><strong>Mrs. Raji Ajith</strong></p>
+                    <p>Educator</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director</p>
+                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <p><strong>TBD</strong></p>
+                    <p>Educator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-2</strong></p>
-                    <p>Director</p>
+                    <img src="Images/bandmember.jpg" alt="Facilitator">
+                    <p><strong>Mrs. Shyni Mathew</strong></p>
+                    <p>Facilitator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-3</strong></p>
-                    <p>Director</p>
+                    <img src="Images/bandmember.jpg" alt="Facilitator">
+                    <p><strong>Valsa</strong></p>
+                    <p>Facilitator</p>
                 </div>
             </div>
         </div>
