Added social icons to main page

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
         <!--End of Google Maps addition-->      
     </div>
     
-    <footer class="text-center">
+    <footer>
     <p>&copy; Nature Kids Kochi</p>
     </footer>
     
