--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/ks_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="scripts/bootstrap-hover-dropdown.min.js"></script>
-
+    <script src="https://use.fontawesome.com/5293e337f8.js"></script>
 </head>
 
 <body>
@@ -107,7 +106,11 @@
     </div>
     
     <footer>
-        <p>&copy; Nature Kids Kochi</p>
+        <div class="copyright">&copy; Nature Kids Kochi</div>
+        <div class="social">
+            <a href="https://www.facebook.com/naturekidskochi"><i class="fa fa-facebook fa-2x" style="color:blue"></i></a>
+            <a href="https://plus.google.com/+NaturekidsCoIn/about"><i class="fa fa-google-plus fa-2x" style="color:red"></i></a>
+        </div>
     </footer>
             
 </body>
