--- a/gallery.html
+++ b/gallery.html
@@ -14,9 +14,11 @@
     <meta name="state" content="Kerala">
     <meta name="country" content="India">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" type="text/css" href="css/ks_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/5293e337f8.js"></script>
 
 </head>
 
@@ -132,7 +134,13 @@
     </div>
     
     <footer>
-    <p>&copy; Nature Kids Kochi</p>
+        <div class="copyright">&copy; Nature Kids Kochi</div>
+        <div class="social">
+            <a class="btn btn-sm btn-social-icon btn-facebook" href="https://www.facebook.com/naturekidskochi" title="Facebook">
+                <span class="fa fa-facebook"></span></a>
+            <a class="btn btn-sm btn-social-icon btn-google" href="https://plus.google.com/+NaturekidsCoIn/about" title="Google+">
+                <span class="fa fa-google"></span></a>
+        </div>
     </footer>
     
 </body>
