Embed social gallery

--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Nature Kids - About Us</title>
+    <title>Nature Kids - Gallery</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nature kids is a Pre School in Kochi, Pre School Kochi, Best Pre School in cochin, day care centre in Kochi Ernakulam, daycare in Kochi, cochin pre-school.">
@@ -66,73 +66,8 @@
     </nav>
 
     <div class="container text-center">
-        <h3>THE EDUCATORS</h3>
-        <p class="text-justify">We have qualified and dedicated staff continually trained by facilitators locally and via webinars from our early childhood advisor in Australia. Our team is committed to providing your child with an educational and caring environment. We work in partnership with children's parents and the wider community to develop each child’s fullest potential.</p>
-        
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Mrs. Rita Rajan</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director, an educationalist with 25 years of experience</p>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Dr. Rajan Zacharia</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-2</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-3</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-2</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-3</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-        </div>
+        <iframe src="//embedsocial.com/facebook_album/album_photos/235290666671396" width="900" height="1500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
-    
     <footer>
         <div class="copyright">&copy; Nature Kids Kochi</div>
         <div class="social">
