filled curriculum, changed navbar dropdown, added the education

--- a/contact.html
+++ b/contact.html
@@ -44,24 +44,14 @@
             <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a href="staff.html">THE EDUCATORS</a></li>
+                <li><a href="curriculum.html">THE EDUCATION</a></li>
                 <li><a href="facilities.html">THE FACILITIES</a></li>
-                <li><a href="curriculum.html">THE CURRICULUM</a></li>
             </ul>
             </li>  
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="gallery.html">GALLERY</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
-        <!--<li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Extras</a></li>
-            <li><a href="#">Media</a></li>
-          </ul>
-        </li>--> 
-      </ul>
+        </ul>
     </div>
     </div>
     </nav>
