--- a/curriculum.html
+++ b/curriculum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Nature Kids - About Us</title>
+    <title>Nature Kids - The Education</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nature kids is a Pre School in Kochi, Pre School Kochi, Best Pre School in cochin, day care centre in Kochi Ernakulam, daycare in Kochi, cochin pre-school.">
@@ -19,6 +19,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/5293e337f8.js"></script>
+    <style>
+        .container{
+            background-color: white;
+            border-radius: 25px;
+            padding: 0px 20px;
+        }
+    </style>
 
 </head>
 
@@ -43,96 +50,51 @@
             <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a href="staff.html">THE EDUCATORS</a></li>
+                <li><a href="curriculum.html">THE EDUCATION</a></li>
                 <li><a href="facilities.html">THE FACILITIES</a></li>
-                <li><a href="curriculum.html">THE CURRICULUM</a></li>
             </ul>
             </li>  
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="gallery.html">GALLERY</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
-        <!--<li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Extras</a></li>
-            <li><a href="#">Media</a></li>
-          </ul>
-        </li>--> 
-      </ul>
+        </ul>
     </div>
     </div>
     </nav>
 
+    <br>
     <div class="container text-center">
-        <h3>THE EDUCATORS</h3>
-        <p class="text-justify">We have qualified and dedicated staff continually trained by facilitators locally and via webinars from our early childhood advisor in Australia. Our team is committed to providing your child with an educational and caring environment. We work in partnership with children's parents and the wider community to develop each child’s fullest potential.</p>
-        
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Mrs. Rita Rajan</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director, an educationalist with 25 years of experience</p>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Dr. Rajan Zacharia</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-2</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-3</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-2</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
-                    <p><strong>Staff-3</strong></p>
-                    <p>Director</p>
-                </div>
-            </div>
-        </div>
+        <h3>THE IDEA</h3>
+        <p class="text-justify">Through Nature Kids Grow, we address all areas of your child’s development- physical, cognitive, emotional and social. Nature Kids deliver an innovative play-based curriculum that is guided by the Australian Early Years Learning Framework which is inspired by internationally recognized best practices such as Montessori and Reggio Emilia Approach.</p>
     </div>
-    
+    <br>
+    <div class="container text-center">    
+        <h3>THE PRINCIPLES</h3>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-success">Language, literacy and communication</li>
+            <li class="list-group-item list-group-item-info">Physical development, health and wellbeing</li>
+            <li class="list-group-item list-group-item-danger">Numeracy and problem solving</li>
+            <li class="list-group-item list-group-item-info">Creative arts</li>
+            <li class="list-group-item list-group-item-danger">Science and technology</li>
+            <li class="list-group-item list-group-item-warning">Social competency</li>
+            <li class="list-group-item list-group-item-success">Sustainability and caring for our planet</li>
+        </ul>
+    </div>
+    <br>
+    <div class="container text-center">        
+        <h3>THE PRACTICE</h3>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-success">Adopting holistic approaches</li>
+            <li class="list-group-item list-group-item-info">Being responsive to children</li>
+            <li class="list-group-item list-group-item-danger">Planning and implementing learning through play</li>
+            <li class="list-group-item list-group-item-info">Intentional teaching</li>
+            <li class="list-group-item list-group-item-danger">Creating physical and social learning environments that have a positive impact on children's learning</li>
+            <li class="list-group-item list-group-item-warning">Valuing the cultural and social contexts of children and their families</li>
+            <li class="list-group-item list-group-item-success">Enabling children to have successful transition</li>
+            <li class="list-group-item list-group-item-warning">Assessing and monitoring children’s learning to inform provision and to support children in achieving learning outcomes.</li>
+        </ul>
+    </div>
+    <br>    
     <footer>
         <div class="copyright">&copy; Nature Kids Kochi</div>
         <div class="social">
