--- a/gallery.html
+++ b/gallery.html
@@ -43,8 +43,8 @@
             <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a href="staff.html">THE EDUCATORS</a></li>
+                <li><a href="curriculum.html">THE EDUCATION</a></li>
                 <li><a href="facilities.html">THE FACILITIES</a></li>
-                <li><a href="curriculum.html">THE CURRICULUM</a></li>
             </ul>
             </li>  
         <li><a href="events.html">EVENTS</a></li>
@@ -65,9 +65,6 @@
     </div>
     </nav>
 
-    <div class="container text-center">
-        <iframe src="//embedsocial.com/facebook_album/album_photos/235290666671396" width="900" height="1500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-    </div>
     <footer>
         <div class="copyright">&copy; Nature Kids Kochi</div>
         <div class="social">
