--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <a href="#" class="dropdown-toggle js-activated" data-toggle="dropdown">ABOUT US <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a href="staff.html">THE EDUCATORS</a></li>
+                <li><a href="curriculum.html">THE EDUCATION</a></li>
                 <li><a href="facilities.html">THE FACILITIES</a></li>
-                <li><a href="curriculum.html">THE CURRICULUM</a></li>
             </ul>
             </li>  
         <li><a href="events.html">EVENTS</a></li>
@@ -65,6 +65,7 @@
     </div>
     </nav>
 
+    <br>
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-pause="hover" data-wrap="true">
     <!-- Indicators -->
     <ol class="carousel-indicators">
